python3-core-api-client (2.2) UNRELEASED; urgency=low

  - Add missing `Clusters.update_singlestore_properties` + `Clusters.update_redis_properties`

 -- William Edwards <wedwards@cyberfusion.nl>  Fri, 19 Sep 2025 13:14:00 +0200

python3-core-api-client (2.1.1) unstable; urgency=low

  - Fix inheritance

 -- William Edwards <wedwards@cyberfusion.nl>  Thu, 18 Sep 2025 15:16:00 +0200

python3-core-api-client (2.1.0) unstable; urgency=low

  - Update API to 1.251
  - Remove descriptions + titles

 -- William Edwards <wedwards@cyberfusion.nl>  Thu, 18 Sep 2025 14:24:00 +0200

python3-core-api-client (2.0) unstable; urgency=low

  - Return DtoResponse instead of models

 -- William Edwards <wedwards@cyberfusion.nl>  Wed, 10 Sep 2025 15:37:00 +0200

python3-core-api-client (1.2.0) unstable; urgency=low

  - Update API to 1.250

 -- William Edwards <wedwards@cyberfusion.nl>  Thu, 28 Aug 2025 21:01:00 +0200

python3-core-api-client (1.1.1) unstable; urgency=low

  - Remove const

 -- William Edwards <wedwards@cyberfusion.nl>  Sat, 23 Aug 2025 22:13:00 +0200

python3-core-api-client (1.1.0) unstable; urgency=low

  - Update API to 1.249

 -- William Edwards <wedwards@cyberfusion.nl>  Sat, 23 Aug 2025 12:15:00 +0200

python3-core-api-client (1.0.6) unstable; urgency=low

  - Use API defaults on create + don't send `null` for unspecified attributes on update

 -- William Edwards <wedwards@cyberfusion.nl>  Sun, 20 Jul 2025 13:41:00 +0200

python3-core-api-client (1.0.5) unstable; urgency=low

  - Fix tombstone forward reference

 -- William Edwards <wedwards@cyberfusion.nl>  Thu, 17 Jul 2025 23:34:00 +0200

python3-core-api-client (1.0.4) unstable; urgency=low

  - Update API to 1.246

 -- William Edwards <wedwards@cyberfusion.nl>  Tue, 15 Jul 2025 12:07:00 +0200

python3-core-api-client (1.0.3) unstable; urgency=low

  - Add `RootModelCollectionMixin`

 -- William Edwards <wedwards@cyberfusion.nl>  Sat, 06 Jul 2025 13:24:00 +0200
