@@ -17,7 +17,7 @@ stages:
 
 unit test and feature test:
   stage: test
-  image: python:3.11
+  image: python:3.11-bookworm
   services:
     - name: stoplight/prism:5.14.2
       alias: prism
